# singleton

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/singleton/: singleton.h  singleton_finalizer.h
src/: singleton_finalizer.cpp
src/test/: singletonTest.cpp
