cmake_minimum_required(VERSION 2.8)
project(singleton CXX)

set(CMAKE_DISABLE_IN_SOURCE_BUILD)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(GTEST_PATH "${CMAKE_BINARY_DIR}/3rd/googletest-release-1.8.0")
file(GLOB DOWNLOADED_GTEST ${CMAKE_SOURCE_DIR}/3rd/google*)
option(ENABLE_TESTS OFF)

if("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(SEND_ERROR "In-source builds are not allowed")
endif()

# On windows, remove lib prefix
if(WIN32)
    set(CMAKE_SHARED_LIBRARY_PREFIX "")
endif()

# Compiler options
if(UNIX)
    set(CMAKE_CXX_FLAGS "-Wall -std=c++14")
    set(CMAKE_CXX_RELEASE_FLAGS "-O2")
    set(CMAKE_CXX_DEBUG_FLAGS "-g3 -fsanitize=leak -fsanitise=address")
endif()

include_directories(include)
add_library(singleton STATIC src/singleton_finalizer.cpp)

if(ENABLE_TESTS)
    enable_testing()
    find_package(GTest)
    if(NOT GTEST_FOUND OR NOT EXISTS "${GTEST_PATH}")
        message("GTest not found. Downloading from github release will start soon.")
        file(DOWNLOAD https://github.com/google/googletest/archive/release-1.8.0.zip ${CMAKE_BINARY_DIR}/3rd/gtest.zip SHOW_PROGRESS)
        message("Unpacking...")
        execute_process(COMMAND unzip ${CMAKE_BINARY_DIR}/3rd/gtest.zip -d ${CMAKE_BINARY_DIR}/3rd)
        execute_process(COMMAND rm ${CMAKE_BINARY_DIR}/3rd/gtest.zip)
        file(GLOB GTEST_PATH ${CMAKE_BINARY_DIR}/3rd/google*)
        add_subdirectory(${GTEST_PATH})
        set(GTEST_LIBRARIES gtest)
        set(GTEST_MAIN_LIBRARIES gtest_main)
        set(GTEST_BOTH_LIBRARIES gtest gtest_main)
    endif()
    include_directories(${GTEST_INCLUDE_DIRS})
    add_executable(singletonTest src/test/singletonTest.cpp)
    target_link_libraries(singletonTest singleton ${GTEST_BOTH_LIBRARIES})
    add_test(singletonTest singletonTest)
endif()
